# routes/user.js
@@ -114,9 +114,6 @@ router.get('/favorites', async (req,res,next) => {
   try{
     const user_id = req.session.user_id;
     const recipes_preview = await user_utils.getmyRecipes(user_id);
-    // let recipes_id_array = [];
-    // recipes_id.map((element) => recipes_id_array.push(element.recipe_id)); //extracting the recipe ids into array
-    // const results = await recipe_utils.getRecipesPreview(recipes_id_array);
     res.status(200).send(recipes_preview);
   } catch(error){
     next(error); 
@@ -131,10 +128,6 @@ router.get('/favorites', async (req,res,next) => {
     const user_id = req.session.user_id;
     const recipe_id = req.params.recipeId;
     const recipes_detailes = await user_utils.getmyRecipesFullDetailes(user_id,recipe_id);
-    
-    // let recipes_id_array = [];
-    // recipes_id.map((element) => recipes_id_array.push(element.recipe_id)); //extracting the recipe ids into array
-    // const results = await recipe_utils.getRecipesPreview(recipes_id_array);
     if (recipes_detailes.length === 0)
     {
       res.status(204).send({message: "no recipes found",success : true});
